<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBlue">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"/>

    <!-- Area of Login and Sign up-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="horizontal"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <!-- Area for login button-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:paddingRight="5dp" >

            <!--content area -->
            <Button
                android:id="@+id/welcome_login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="Log in"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_style_blue" />
        </RelativeLayout>
        <!-- end of listing icon -->


        <!-- Area for main page icon -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:paddingLeft="5dp" >

            <!--content area -->
            <Button
                android:id="@+id/welcome_signup"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="Sign up"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_style_white"/>
        </RelativeLayout>

    </LinearLayout>
    <!-- end of login and signup field -->
</RelativeLayout>