...
            android:background="@color/grayColor"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />


        <Button
            android:id="@+id/logout_button"
            android:text="Log Out"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="15dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_style_white"
            android:layout_marginBottom="60dp"
...
