...
    <item android:id="@+id/lists"
        android:icon="@mipmap/ic_list_black_24dp"
        android:title="Lists" />
    <item android:id="@+id/home"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="Home" />
    <item android:id="@+id/account"
        android:icon="@mipmap/ic_account_circle_black_24dp"
        android:title="Account"/>
</menu>

