<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.example.blog.ListOfSells">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/startText"
            android:hint="Start*"
            android:background="@drawable/roundbar"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/destText"
            android:hint="Destination*"
            android:background="@drawable/roundbar"
            android:layout_below="@+id/startText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="Choose Date* :"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chooseDate"
                android:layout_marginTop="20dp"/>
            <Button
                android:text="month/day/year"
                android:id="@+id/dateBtn"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_below="@+id/dateText"
            android:background="@drawable/roundbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:id="@+id/priceText"
            android:hint="($) Price"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_below="@+id/priceText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:id="@+id/additText"
            android:hint="@string/additional_details"
            android:background="@drawable/roundbar"
            android:padding="5dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="* Fields Required"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_below="@+id/additText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp" />
    </LinearLayout>

    <Button
        android:text="@string/submit_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/postBtn"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

</RelativeLayout>
